error.txt
  File "/home/runner/work/self-heal-CI-CD/self-heal-CI-CD/src/bug.py", line 41
    ```
    ^
SyntaxError: invalid syntax
